feat(broker-manager): Add search and pagination parameters to the queue listing endpoint
This commit adds search and pagination parameters to the `/queues` endpoint.  The search parameter allows filtering queues by name, and the pagination parameters (page and size) will be used in future implementations for improved performance.  The logging has also been improved to include the search and pagination parameters.